# doesnotfail2ban

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature-request.yml  filter.yml
.github/workflows/: tests.yaml
docs/: Config.md  Configuration.md  FAQ.md  Filters.md  Ideas.md  Installation.md  Service-config-examples.md  Terminology.md  Why-not-use-f2b.md
docs/bouncers/: Iptables.md
docs/design/: Jails-and-bouncers.md  README.md
docs/extending/: Parsers.md  README.md  Substitutes.md
docs/parsers/: FileParser.md  JournaldParser.md  README.md
docs/spec/: Types.md
etc/dnf2b/: config.json  config.yaml
etc/dnf2b/filters/: nginx-auth.json  nginx-badactors.json  nginx-error.json  nginx-nmap.json  nginx.json  ntfy-nginx.json  sshd-aggressive.json  sshd-bruteforce.json  sshd.json
etc/dnf2b/parsers/: journald.json  nginx-access.json  nginx-error.json  sshd.json
etc/systemd/system/: dnf2b.service
scripts/: install.sh
src/: CMakeLists.txt
src/dnf2b/: Main.cpp
src/dnf2b/bouncers/: Bouncer.hpp  BouncerLoader.cpp  BouncerLoader.hpp  IPTableBouncer.cpp  IPTableBouncer.hpp  NoopBouncer.hpp  UFWBouncer.hpp
src/dnf2b/cli/: FilterWizard.cpp  FilterWizard.hpp  Tester.cpp  Tester.hpp
src/dnf2b/communicators/: Communicator.hpp  NetworkCommunicator.hpp
src/dnf2b/core/: Config.cpp  Config.hpp  Context.cpp  Context.hpp  Daemon.cpp  Daemon.hpp
src/dnf2b/data/: BanDB.cpp  BanDB.hpp  BanManager.cpp  BanManager.hpp  MessageBuffer.cpp  MessageBuffer.hpp  ReadStateDB.cpp  ReadStateDB.hpp  Structs.hpp
src/dnf2b/except/: Exceptions.hpp
src/dnf2b/filters/: Filter.cpp  Filter.hpp
src/dnf2b/infrastructure/: HealthCheck.hpp
src/dnf2b/json/: Config.hpp  JsonImpl.cpp  SerialiserImpl.hpp
src/dnf2b/sources/: FileParser.cpp  FileParser.hpp  JournalCTLParser.cpp  JournalCTLParser.hpp  Parser.cpp  Parser.hpp  ParserLoader.cpp  ParserLoader.hpp  Reader.cpp  Reader.hpp
src/dnf2b/static/: ConfDefault.hpp  Constants.hpp
src/dnf2b/ui/: CLI.cpp  CLI.hpp
src/dnf2b/util/: Clock.hpp  Colour.hpp  IP.hpp  PCRE.cpp  PCRE.hpp  Parsing.cpp  Parsing.hpp
src/dnf2b/utils/: IP.cpp  IP.hpp
src/dnf2b/watcher/: Watcher.cpp  Watcher.hpp
src/dnf2b/wizard/: Wizard.cpp  Wizard.hpp
tests/: CMakeLists.txt
tests/src/: BanManagerTests.cpp  DatabaseTests.cpp  FilterTests.cpp  MessageBufferTests.cpp  PCRETests.cpp  ParserTest.cpp  ParserTests.cpp  ParsingUtilTests.cpp  TestRunner.cpp  WatcherTests.cpp
tests/src/integration/: JournaldParserTests.cpp
tests/src/regression/: ConfigRegressionTests.cpp
tests/src/util/: DBWrapper.hpp  MockHelper.cpp  MockHelper.hpp
